# colc

./: Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: makefile.yml
colc/: __about__.py  __init__.py  _compile.py  _debug.py  _encode.py  _main.py  _object.py  compile.py  main.py  object.py
colc/backend/: __init__.py  _config.py  _context.py  _file.py  _fixpoint.py  _functions.py  _functions_impl.py  _instruction.py  _jmp_anchor.py  _lexpression.py  _mapping.py  _opcode.py  _operation.py  _operator.py  _process_constraint.py  _process_expression.py  _process_instructions.py  _process_mapping.py  _scope.py  _scope_context.py  _typing.py  _utils.py  file.py  lexpression.py  object.py  process.py  process_constraint.py  process_constraints.py  scope.py
colc/common/: __init__.py  _fatal.py  _internal.py  _io.py  _string_builder.py  _text.py  _utils.py
colc/frontend/: __init__.py  _ast.py  _enums.py  _parser.py  _value.py  _visitor.py  ast.py  enums.py  grammar.lark  parser.py  visitor.py
colc/includes/: std.coli
colc/problems/: __init__.py  fatal.py  internal.py
frontend/ast/: enums.py  nodes.py  visitor.py
frontend/parser/: parser.py
main/: __init__.py  main.py
main/backend/: __init__.py  constraints.py  file.py  pool.py  scope.py
main/problems/: __init__.py  fatal.py  internal.py
test/constraints/: __init__.py  attribute_stmt.test  definition_any.test  empty_all.test  include_std.test  named_constraint.test  named_constraint_args.test  predicate_block.test  statement_block.test  with_stmt.test
(+196 files in other folders)
