[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "colc"
dynamic = ["version", "description", "dependencies"]
authors = [{ name = "Daniel Brauner", email = "daniel.brauner@tum.de" }]
license-files = { paths = ["LICENSE"] }
readme = "README.md"
requires-python = ">=3.12"

[project.scripts]
colc = "colc:main"

[tool.hatch.version]
path = "colc/__about__.py"

[tool.hatch.description]
path = "colc/__about__.py"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.build.targets.wheel]
packages = ["colc"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"